generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id                String                  @id @default(cuid())
  email             String                  @unique
  username          String                  @unique
  passwordHash      String
  role              String                  @default("USER")
  language          String                  @default("en")
  avatarUrl         String?
  resetToken        String?                 @unique
  resetTokenExpires DateTime?
  createdAt         DateTime                @default(now())
  collections       Collection[]
  favorites         Favorite[]
  prompts           Prompt[]
  versions          PromptVersion[]
  settings          Settings?
  interactions      UserPromptInteraction[]
  workflows         Workflow[]
  hiddenInSettings  Settings[]              @relation("UserVisibility")
}

model Settings {
  id                String       @id @default(cuid())
  userId            String       @unique
  autoBackupEnabled Boolean      @default(false)
  backupPath        String?
  backupFrequency   String       @default("DAILY")
  lastBackupAt      DateTime?
  showPrompterTips  Boolean      @default(true)
  tagColorsEnabled  Boolean      @default(true)
  workflowVisible   Boolean      @default(false)
  user              User         @relation(fields: [userId], references: [id])
  hiddenCollections Collection[] @relation("CollectionVisibility")
  hiddenUsers       User[]       @relation("UserVisibility")
}

model GlobalConfiguration {
  id                    String  @id @default("GLOBAL")
  registrationEnabled   Boolean @default(true)
  privatePromptsEnabled Boolean @default(false)
}

model Prompt {
  id               String                  @id @default(cuid())
  title            String
  description      String?
  resource         String?
  currentVersionId String?
  createdById      String
  viewCount        Int                     @default(0)
  copyCount        Int                     @default(0)
  isLocked         Boolean                 @default(false)
  isPrivate        Boolean                 @default(false)
  itemType         String                  @default("PROMPT")
  repoUrl          String?
  url              String?
  installCommand   String?
  createdAt        DateTime                @default(now())
  updatedAt        DateTime                @updatedAt
  technicalId      String?                 @unique
  favoritedBy      Favorite[]
  createdBy        User                    @relation(fields: [createdById], references: [id])
  versions         PromptVersion[]
  interactions     UserPromptInteraction[]
  workflowSteps    WorkflowStep[]
  collections      Collection[]            @relation("CollectionToPrompt")
  relatedPrompts   Prompt[]                @relation("PromptLinks")
  relatedToPrompts Prompt[]                @relation("PromptLinks")
  tags             Tag[]                   @relation("PromptToTag")
}

model TechnicalIdSequence {
  prefix    String @id
  lastValue Int    @default(0)
}

model Tag {
  id        String   @id @default(cuid())
  name      String   @unique
  color     String?
  createdAt DateTime @default(now())
  prompts   Prompt[] @relation("PromptToTag")
}

model PromptVersion {
  id                  String       @id @default(cuid())
  promptId            String
  content             String
  shortContent        String?
  usageExample        String?
  variableDefinitions String?
  model               String?
  resultImage         String?
  resultText          String?
  versionNumber       Int
  changelog           String?
  createdById         String
  createdAt           DateTime     @default(now())
  agentUsage          String?
  agentSkillIds       String?
  attachments         Attachment[]
  prompt              Prompt       @relation(fields: [promptId], references: [id], onDelete: Cascade)
  createdBy           User         @relation(fields: [createdById], references: [id])
}

model Attachment {
  id           String        @id @default(cuid())
  versionId    String
  filePath     String
  fileType     String
  originalName String?
  role         String        @default("ATTACHMENT")
  createdAt    DateTime      @default(now())
  version      PromptVersion @relation(fields: [versionId], references: [id], onDelete: Cascade)
}

model Collection {
  id               String       @id @default(cuid())
  title            String
  description      String?
  ownerId          String
  parentId         String?
  createdAt        DateTime     @default(now())
  owner            User         @relation(fields: [ownerId], references: [id])
  parent           Collection?  @relation("CollectionHierarchy", fields: [parentId], references: [id])
  children         Collection[] @relation("CollectionHierarchy")
  prompts          Prompt[]     @relation("CollectionToPrompt")
  hiddenInSettings Settings[]   @relation("CollectionVisibility")
}

model Workflow {
  id          String         @id @default(cuid())
  title       String
  description String?
  ownerId     String
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  owner       User           @relation(fields: [ownerId], references: [id])
  steps       WorkflowStep[]
}

model WorkflowStep {
  id            String   @id @default(cuid())
  workflowId    String
  promptId      String
  order         Int
  inputMappings String?
  workflow      Workflow @relation(fields: [workflowId], references: [id], onDelete: Cascade)
  prompt        Prompt   @relation(fields: [promptId], references: [id])
}

model Favorite {
  userId    String
  promptId  String
  createdAt DateTime @default(now())
  user      User     @relation(fields: [userId], references: [id])
  prompt    Prompt   @relation(fields: [promptId], references: [id])

  @@id([userId, promptId])
}

model UserPromptInteraction {
  id        String   @id @default(cuid())
  userId    String
  promptId  String
  type      String   @default("USE")
  updatedAt DateTime @default(now()) @updatedAt
  prompt    Prompt   @relation(fields: [promptId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, promptId])
  @@index([userId, updatedAt])
}
